--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 header > h1 {
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: var(--fonte-destaque);
     font-size: 3em;
     font-weight: normal;
@@ -97,7 +97,7 @@ main {
 
 main h1 {
     color: var(--cor5);
-    font-family: var(--font-android);
+    font-family: var(--font-android)
     font-weight: normal;
     font-size: 1.8em;
 }
