--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* Confifurações gerais */
 * {
     margin: 0px;
     padding: 0px;
@@ -8,13 +9,12 @@
     html, body {
         width: 100vw;
         padding: 100vh;
-        background-color: blue;
+        
         background-size: contain;
-        background-repeat: no-repeat;
     }
     
     h1 {
         color: white;
-        text-shadow: 3px 3px 0px rgb(1, 1, 99);
+        text-shadow: 2px 2px 0px black;
         padding: 10px;
     }
