--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -9,11 +9,12 @@
     html, body {
         width: 100vw;
         padding: 100vh;
-        
+        background-color: blue;
         background-size: contain;
+        background-repeat: no-repeat;
     }
     
-    h1 {
+    h1{
         color: white;
         text-shadow: 2px 2px 0px black;
         padding: 10px;
