--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Confifurações gerais */
-* {
+    * {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,13 +8,13 @@
     
     html, body {
         width: 100vw;
-        padding: 100vh;
+        height: 100vh;
         background-color: blue;
         background-size: contain;
         background-repeat: no-repeat;
     }
     
-    h1{
+    h1 {
         color: white;
         text-shadow: 2px 2px 0px black;
         padding: 10px;
